@@ -125,6 +125,12 @@ typedef enum {
 // defaults to 640.
 @property (nonatomic) NSInteger maxScanDimension;
 
+// display the built-in help browser.  for use with custom overlays if
+// you don't also want to create your own help view.  only send this
+// message when the reader is displayed.  the argument will be passed
+// to the onZBarHelp() javascript function.
+- (void) showHelpWithReason: (NSString*) reason;
+
 // direct scanner interface - scan UIImage and return something enumerable
 - (id <NSFastEnumeration>) scanImage: (CGImageRef) image;
 
