@@ -73,7 +73,7 @@ div.col { width: 50% }
 function onZBarHelp(argv) {
 var title;
 switch(argv.reason) {
-case "HELP": break;
+case "INFO": break;
 case "FAIL": title = "No Barcode Detected"; break;
 }
 if(title) document.getElementById('title').textContent = title;
